--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     background-color: #4b4545;
     color: #e0e0e0;
     font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 60px;
 }
 
 a {
@@ -11,6 +12,13 @@ a {
 header, footer {
     background-color: #262129;
     color: #cccccc;
+}
+
+footer {
+  position:fixed;
+  bottom:0;
+  width:100%;
+  height:60px;
 }
 
 button, input, textarea {
